# de-noise-pro-vst

./: .gitignore  CMakeLists.txt  README.md  TECHNICAL_NOTES.md  build_log.txt  build_vst3.bat  build_vst3.ps1  test.eel
.github/workflows/: build.yml
Source/: ChipDetector.h  CyberDenoiserEditor.cpp  CyberDenoiserEditor.h  CyberDenoiserProcessor.cpp  CyberDenoiserProcessor.h
